<?xml version="1.0"?>
<package format="2">
  <name>ros_senseglove</name>
  <version>0.0.0</version>
  <description>The ros_senseglove package</description>
  <license>BSD-3</license>
  <author email="unicorn@roboy.org">Alona Kharchenko</author>
  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>roboy_middleware_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
